Fixed issue with User type

--- a/GitHubReports.ipynb
+++ b/GitHubReports.ipynb
@@ -98,19 +98,18 @@
    "id": "e03e81e6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-07T18:59:49.344658Z",
-     "start_time": "2022-03-07T18:59:47.668529Z"
+     "end_time": "2022-04-18T14:50:39.068083Z",
+     "start_time": "2022-04-18T14:50:39.055071Z"
     },
     "code_folding": [
-     21,
-     28,
-     35
+     36
     ]
    },
    "outputs": [],
    "source": [
     "import requests\n",
     "import pprint\n",
+    "import json\n",
     "from gitsecrets import GITHUB_USER,GITHUB_TOKEN\n",
     "from IPython.display import display, Math, HTML, Markdown\n",
     "import datetime  \n",
@@ -183,8 +182,8 @@
    "id": "a53b883e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-09T02:26:46.994265Z",
-     "start_time": "2022-03-09T02:26:35.267039Z"
+     "end_time": "2022-04-18T15:24:32.055998Z",
+     "start_time": "2022-04-18T15:24:27.352885Z"
     }
    },
    "outputs": [],
@@ -194,7 +193,7 @@
     "org = ''\n",
     "if reportType == \"U\" :\n",
     "    print('Your report will be base on your Git User')\n",
-    "    repoUrl = 'https://api.github.com/user/repos' \n",
+    "    repoUrl = 'https://api.github.com/repos/' +  GITHUB_USER\n",
     "    repoResponse = requests.get(repoUrl, auth=auth)\n",
     "    print('Authorization Confirmed for user: ' + GITHUB_USER + ' Repo Url is: '+ repoUrl)\n",
     "elif reportType == \"O\":\n",
@@ -234,24 +233,24 @@
    "id": "80ab91e2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-09T02:26:53.433338Z",
-     "start_time": "2022-03-09T02:26:53.423859Z"
+     "end_time": "2022-04-18T15:26:40.977329Z",
+     "start_time": "2022-04-18T15:26:40.960314Z"
     }
    },
    "outputs": [],
    "source": [
     "tmpReposFilterUrls = []\n",
     "# Add Filters as required as show below\n",
-    "# tmpReposFilterUrls.append('JupyterCloud')\n",
-    "\n",
+    "tmpReposFilterUrls.append('JupyterCloud')\n",
+    "tmpReposFilterUrls.append('me262_oci-iac')\n",
     "\n",
     "\n",
     "print( 'Number of Filters: '  ,len(tmpReposFilterUrls))\n",
     "print('Filter List:')\n",
     "reposFilterUrls = []\n",
     "for rFilter in tmpReposFilterUrls:\n",
-    "    if type == 'U':\n",
-    "        urlExtn = 'user/repos/'\n",
+    "    if reportType == 'U':\n",
+    "        urlExtn = 'repos/' + GITHUB_USER + '/'\n",
     "    else:\n",
     "        urlExtn = 'repos/' + org + '/'\n",
     "    newFilter = 'https://api.github.com/' + urlExtn + rFilter.split(\":\")[0] \n",
@@ -274,8 +273,8 @@
    "id": "dfef8a2a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-09T02:27:00.459385Z",
-     "start_time": "2022-03-09T02:26:59.023674Z"
+     "end_time": "2022-04-18T15:26:44.670998Z",
+     "start_time": "2022-04-18T15:26:44.256413Z"
     }
    },
    "outputs": [],
@@ -309,11 +308,10 @@
    "id": "41af5a60",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-09T22:05:49.163390Z",
-     "start_time": "2022-03-09T22:05:26.556658Z"
+     "end_time": "2022-04-18T15:29:19.213613Z",
+     "start_time": "2022-04-18T15:29:11.616501Z"
     },
     "code_folding": [
-     56,
      80
     ]
    },
@@ -322,7 +320,7 @@
     "reposIssuesList = []\n",
     "milestonesList = []\n",
     "targetBranch = 'alpha-dev'\n",
-    "# targetBranch = 'main'\n",
+    "targetBranch = 'main'\n",
     "#  Milestones section\n",
     "for repo in repos:\n",
     "    #  oci-iac repo contains milestone descriptions and due dates\n",
@@ -893,7 +891,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
