Added myRepos json file handler

--- a/GitHubReportMd.ipynb
+++ b/GitHubReportMd.ipynb
@@ -6,8 +6,8 @@
    "id": "b912c774",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-12T16:54:24.968532Z",
-     "start_time": "2022-03-12T16:54:24.939466Z"
+     "end_time": "2022-04-19T20:13:57.665127Z",
+     "start_time": "2022-04-19T20:13:57.654117Z"
     }
    },
    "outputs": [],
@@ -32,7 +32,8 @@
     "    data = f.read()\n",
     "milestonesList = json.loads(data)\n",
     "#\n",
-    "# To Create WebPdf use:   jupyter nbconvert .\\GitHubReportMd.ipynb --to webpdf --no-input\n",
+    "# To Create WebPdf use:  \n",
+    "#     jupyter nbconvert .\\GitHubReportMd.ipynb --to webpdf --no-input --output-dir='../docs' --output MyGitHubReport\n",
     "#"
    ]
   },
@@ -42,8 +43,8 @@
    "id": "27be11c9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-12T20:42:42.065825Z",
-     "start_time": "2022-03-12T20:42:42.057698Z"
+     "end_time": "2022-04-19T20:13:57.680143Z",
+     "start_time": "2022-04-19T20:13:57.666136Z"
     }
    },
    "outputs": [],
@@ -108,8 +109,8 @@
    "id": "e2a2bb00",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-12T16:54:25.011658Z",
-     "start_time": "2022-03-12T16:54:24.990549Z"
+     "end_time": "2022-04-19T20:13:57.695167Z",
+     "start_time": "2022-04-19T20:13:57.681145Z"
     },
     "code_folding": []
    },
@@ -148,12 +149,10 @@
    "id": "e40d4211",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-12T16:54:25.037370Z",
-     "start_time": "2022-03-12T16:54:25.015710Z"
+     "end_time": "2022-04-19T20:13:57.710179Z",
+     "start_time": "2022-04-19T20:13:57.696167Z"
     },
-    "code_folding": [
-     9
-    ],
+    "code_folding": [],
     "scrolled": true
    },
    "outputs": [],
@@ -200,8 +199,8 @@
    "id": "77e40982",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-12T20:42:54.728894Z",
-     "start_time": "2022-03-12T20:42:54.712816Z"
+     "end_time": "2022-04-19T20:13:57.740475Z",
+     "start_time": "2022-04-19T20:13:57.711181Z"
     },
     "code_folding": []
    },
@@ -248,8 +247,8 @@
    "id": "035f5f8f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-12T19:57:43.758883Z",
-     "start_time": "2022-03-12T19:57:43.649254Z"
+     "end_time": "2022-04-19T20:13:57.755490Z",
+     "start_time": "2022-04-19T20:13:57.741477Z"
     },
     "code_folding": [
      53
@@ -330,8 +329,8 @@
    "id": "9485b089",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-12T16:54:25.189756Z",
-     "start_time": "2022-03-12T16:54:25.159802Z"
+     "end_time": "2022-04-19T20:13:57.770503Z",
+     "start_time": "2022-04-19T20:13:57.756490Z"
     },
     "code_folding": [
      5
@@ -380,8 +379,8 @@
    "id": "b0ca6e1e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-03-12T16:54:25.214494Z",
-     "start_time": "2022-03-12T16:54:25.192934Z"
+     "end_time": "2022-04-19T20:13:57.785330Z",
+     "start_time": "2022-04-19T20:13:57.770503Z"
     },
     "code_folding": [
      5
@@ -431,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
