--- a/GitHubReports.ipynb
+++ b/GitHubReports.ipynb
@@ -98,8 +98,8 @@
    "id": "e03e81e6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-18T14:50:39.068083Z",
-     "start_time": "2022-04-18T14:50:39.055071Z"
+     "end_time": "2022-04-19T20:02:53.974288Z",
+     "start_time": "2022-04-19T20:02:53.848418Z"
     },
     "code_folding": [
      36
@@ -182,8 +182,8 @@
    "id": "a53b883e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-18T15:24:32.055998Z",
-     "start_time": "2022-04-18T15:24:27.352885Z"
+     "end_time": "2022-04-19T20:08:32.969937Z",
+     "start_time": "2022-04-19T20:08:27.765712Z"
     }
    },
    "outputs": [],
@@ -233,17 +233,25 @@
    "id": "80ab91e2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-18T15:26:40.977329Z",
-     "start_time": "2022-04-18T15:26:40.960314Z"
+     "end_time": "2022-04-19T20:08:40.150342Z",
+     "start_time": "2022-04-19T20:08:40.143336Z"
     }
    },
    "outputs": [],
    "source": [
     "tmpReposFilterUrls = []\n",
     "# Add Filters as required as show below\n",
-    "tmpReposFilterUrls.append('JupyterCloud')\n",
-    "tmpReposFilterUrls.append('me262_oci-iac')\n",
+    "# tmpReposFilterUrls.append('JupyterCloud')\n",
+    "# tmpReposFilterUrls.append('me262_oci-iac')\n",
     "\n",
+    "with open('myRepos.json') as f:\n",
+    "    data = f.read()\n",
+    "\n",
+    "# reconstructing the data as a dictionary\n",
+    "myRepos = json.loads(data)\n",
+    "for myRepo in myRepos:\n",
+    "    tmpReposFilterUrls.append(myRepo)\n",
+    "# print(js)\n",
     "\n",
     "print( 'Number of Filters: '  ,len(tmpReposFilterUrls))\n",
     "print('Filter List:')\n",
@@ -273,8 +281,8 @@
    "id": "dfef8a2a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-18T15:26:44.670998Z",
-     "start_time": "2022-04-18T15:26:44.256413Z"
+     "end_time": "2022-04-19T20:08:50.707794Z",
+     "start_time": "2022-04-19T20:08:48.922470Z"
     }
    },
    "outputs": [],
@@ -308,8 +316,8 @@
    "id": "41af5a60",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-18T15:29:19.213613Z",
-     "start_time": "2022-04-18T15:29:11.616501Z"
+     "end_time": "2022-04-19T20:09:11.788764Z",
+     "start_time": "2022-04-19T20:08:55.539650Z"
     },
     "code_folding": [
      80
